# judgment-under-uncertainty-eval

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  fundamental.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
adversarial/: README.md
docs/: eval_card_template.md  failure_modes.md  grading_rubric.md  usage.md
evals/01_equity_thesis/: README.md
evals/02_dcf_valuation/: README.md
evals/03_portfolio_construction/: README.md
evals/04_earnings_analysis/: README.md
evals/05_risk_attribution/: README.md
evals/06_spurious_correlation_and_fragility/: README.md
evals/06_spurious_correlation_and_fragility/scenarios/: 06_01_etf_flow_correlation.yaml  06_02_glp1_medtech_correlation.yaml  06_03_low_vol_healthcare_services.yaml  06_04_pharma_rd_tools.yaml  06_05_smallcap_biotech_rates.yaml
evals/07_probabilistic_judgment_and_calibration/: README.md
evals/07_probabilistic_judgment_and_calibration/scenarios/: 07_01_fda_binary_outcome.yaml  07_02_recession_probability.yaml  07_03_earnings_beat_miss.yaml  07_04_merger_completion.yaml  07_05_interest_rate_direction.yaml
src/: __init__.py  calibration.py  extract_pairs.py  grade.py  run_eval.py
tests/: __init__.py  test_calibration.py  test_scenarios.py
