[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judgment-under-uncertainty-eval"
version = "0.1.0"
description = "Domain-expert evaluation framework for AI judgment quality in healthcare investing"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Brad Schonhoft"}
]
keywords = [
    "ai-evaluation",
    "llm",
    "healthcare",
    "investing",
    "judgment",
    "rlhf",
    "red-teaming"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = [
    "openai>=1.0",
    "anthropic>=0.18",
]
analysis = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
all = [
    "judgment-under-uncertainty-eval[api,analysis,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/bradschonhoft/judgment-under-uncertainty-eval"
Documentation = "https://github.com/bradschonhoft/judgment-under-uncertainty-eval#readme"
Repository = "https://github.com/bradschonhoft/judgment-under-uncertainty-eval"
Issues = "https://github.com/bradschonhoft/judgment-under-uncertainty-eval/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "F401",   # unused imports (acceptable in eval scripts)
    "UP006",  # use modern type annotations
    "UP035",  # deprecated typing imports
    "UP045",  # use X | None syntax
    "I001",   # import sorting
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
